--- a/app/src/main/res/layout/keyboard_layout.xml
+++ b/app/src/main/res/layout/keyboard_layout.xml
@@ -1,214 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Keyboard"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:columnCount="4"
+    android:rowCount="4">
 
     <TextView
         android:id="@+id/TextField"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
         android:text="@string/EnterNumber"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/Keyboard"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_columnSpan="4"
+        android:layout_margin="4dp"
+        android:gravity="center"
+        android:textSize="30sp" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/Keyboard"
+    <Button
+        android:id="@+id/One"
+        style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_row="1"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="1" />
 
+    <Button
+        android:id="@+id/Two"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="1"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="2" />
 
+    <Button
+        android:id="@+id/Three"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="3" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/Keyboard1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.95">
+    <Button
+        android:id="@+id/Enter"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="1"
+        android:layout_column="3"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/Enter" />
 
-            <Button
-                android:id="@+id/One"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="1"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
+    <Button
+        android:id="@+id/Four"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="4" />
 
-            <Button
-                android:id="@+id/Two"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="2"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/One"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
+    <Button
+        android:id="@+id/Five"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="2"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="5" />
 
-            <Button
-                android:id="@+id/Three"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="3"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Two"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
+    <Button
+        android:id="@+id/Six"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="2"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="6" />
 
-            <Button
-                android:id="@+id/Enter"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="@string/Enter"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Three"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
+    <Button
+        android:id="@+id/Delete"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="2"
+        android:layout_column="3"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/Delete" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/Seven"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="7" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/Keyboard2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Keyboard1"
-            app:layout_constraintWidth_percent="0.95">
+    <Button
+        android:id="@+id/Eight"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="3"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="8" />
 
-            <Button
-                android:id="@+id/Four"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="4"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
+    <Button
+        android:id="@+id/Nine"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="3"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="9" />
 
-            <Button
-                android:id="@+id/Five"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="5"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Four"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-            <Button
-                android:id="@+id/Six"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="6"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Five"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-            <Button
-                android:id="@+id/Delete"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="@string/Delete"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Six"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/Keyboard3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Keyboard2"
-            app:layout_constraintWidth_percent="0.95">
-
-            <Button
-                android:id="@+id/Seven"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:text="7"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-            <Button
-                android:id="@+id/Eight"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="8"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Seven"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-            <Button
-                android:id="@+id/Nine"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="9"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Eight"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-            <Button
-                android:id="@+id/Zero"
-                style="@style/MenuButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="12dp"
-                android:text="0"
-                app:layout_constraintHeight_percent="0.85"
-                app:layout_constraintStart_toEndOf="@+id/Nine"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.225" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/Zero"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="3"
+        android:layout_column="3"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="0" />
+</GridLayout>
