Working on matrix calculator

--- a/app/src/main/res/layout/backbuttonbar_layout.xml
+++ b/app/src/main/res/layout/backbuttonbar_layout.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/White"
-    android:padding="16dp"
     android:titleTextColor="#FFFFFF">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
         <Button
             android:id="@+id/BackButton"
