--- a/app/src/main/res/layout/matrixkeyboard_layout.xml
+++ b/app/src/main/res/layout/matrixkeyboard_layout.xml
@@ -5,14 +5,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="4"
-    android:rowCount="3">
+    android:rowCount="4">
+
+    <Button
+        android:id="@+id/RowPlus"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/RowPlus" />
+
+    <Button
+        android:id="@+id/RowMinus"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="0"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/RowMinus" />
+
+    <Button
+        android:id="@+id/ColPlus"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/ColPlus" />
+
+    <Button
+        android:id="@+id/ColMinus"
+        style="@style/MenuButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="0"
+        android:layout_column="3"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1"
+        android:layout_margin="4dp"
+        android:text="@string/ColMinus" />
 
     <Button
         android:id="@+id/One"
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -24,7 +72,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -36,7 +84,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -48,7 +96,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="0"
+        android:layout_row="1"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -60,7 +108,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -72,7 +120,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -84,7 +132,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -96,7 +144,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="1"
+        android:layout_row="2"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -108,7 +156,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="0"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -120,7 +168,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="1"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -132,7 +180,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="2"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
@@ -144,7 +192,7 @@
         style="@style/MenuButtonStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_row="2"
+        android:layout_row="3"
         android:layout_column="3"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
