--- a/app/src/main/res/layout/matrix_layout.xml
+++ b/app/src/main/res/layout/matrix_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Matrix"
+    android:id="@+id/GridLayoutMatrix"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnCount="2"
@@ -13,6 +13,7 @@
         android:textColor="@color/white"
         android:inputType="text"
         android:maxLength="3"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,6 +30,7 @@
         android:textColor="@color/white"
         android:inputType="text"
         android:maxLength="3"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -45,6 +47,7 @@
         android:textColor="@color/white"
         android:inputType="text"
         android:maxLength="3"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -61,6 +64,7 @@
         android:textColor="@color/white"
         android:inputType="text"
         android:maxLength="3"
+        android:textSize="16sp"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -70,4 +74,5 @@
         android:layout_columnWeight="1"
         android:layout_margin="4dp"
         />
+
 </GridLayout>
