--- a/app/src/main/res/layout/matrixcalculator_activity.xml
+++ b/app/src/main/res/layout/matrixcalculator_activity.xml
@@ -5,40 +5,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.mathmaster.customviews.Matrix
-        android:id="@+id/Matrix"
+    <EditText
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Enter text here"
+        android:inputType="text" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/Keyboard"
-        app:layout_constraintWidth_percent="0.375"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintWidth_percent="0.6">
+
+        <com.example.mathmaster.customviews.Matrix
+            android:id="@+id/Matrix"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintHeight_percent="0.5"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.example.mathmaster.customviews.MatrixKeyboard
         android:id="@+id/Keyboard"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/BottomBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.9" />
 
-    <Button
-        android:id="@+id/Back"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
+    <com.example.mathmaster.customviews.BackButtonWithBar
+        android:id="@+id/BottomBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="@string/Back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.4" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
