--- a/app/src/main/res/layout/matrix_layout.xml
+++ b/app/src/main/res/layout/matrix_layout.xml
@@ -10,9 +10,11 @@
     <EditText
         android:id="@+id/row1col1"
         android:background="@drawable/matrix_cell_background"
-        android:textColor="@color/white"
+        android:textColor="@color/White"
         android:inputType="text"
         android:maxLength="3"
+        android:hint = "0"
+        android:textColorHint="@color/White"
         android:textSize="16sp"
         android:textAlignment="center"
         android:layout_width="0dp"
@@ -31,6 +33,8 @@
         android:inputType="text"
         android:maxLength="3"
         android:textSize="16sp"
+        android:hint = "0"
+        android:textColorHint="@color/White"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -48,6 +52,8 @@
         android:inputType="text"
         android:maxLength="3"
         android:textSize="16sp"
+        android:hint = "0"
+        android:textColorHint="@color/White"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -65,6 +71,8 @@
         android:inputType="text"
         android:maxLength="3"
         android:textSize="16sp"
+        android:hint = "0"
+        android:textColorHint="@color/White"
         android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="0dp"
