--- a/app/src/main/res/layout/practice_activity.xml
+++ b/app/src/main/res/layout/practice_activity.xml
@@ -6,163 +6,183 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/PracticeStatistics"
+    <LinearLayout
+        android:id="@+id/MenuBlock"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.83"
-        app:cardCornerRadius="10dp">
+        app:layout_constraintWidth_percent="0.9">
 
-        <LinearLayout
-            style="@style/MenuButtonStyle"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/PracticeStatistics"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <!-- Card Title -->
-            <TextView
-                android:id="@+id/PracticeStatisticsTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:text="@string/StatisticsOverview"
-                android:textColor="@color/White"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <!-- Statistic 1: Total practices -->
             <LinearLayout
+                style="@style/MenuButtonStyle"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingVertical="4dp">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
+                <!-- Card Title -->
                 <TextView
-                    android:id="@+id/PracticeStatisticsTotalPractices"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/TotalPractices"
-                    android:textColor="@color/White" />
-
-                <TextView
-                    android:id="@+id/PracticeStatisticsTotalPracticesValue"
+                    android:id="@+id/PracticeStatisticsTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0"
+                    android:layout_marginBottom="20dp"
+                    android:text="@string/StatisticsOverview"
                     android:textColor="@color/White"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
-            </LinearLayout>
 
-            <!-- Statistic 2: Average time -->
-            <LinearLayout
+                <!-- Statistic 1: Total practices -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="4dp">
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsTotalPractices"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/TotalPractices"
+                        android:textColor="@color/White" />
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsTotalPracticesValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/White"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <!-- Statistic 2: Average time -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="4dp">
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsTime"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/AverageTimeOfPractice"
+                        android:textColor="@color/White" />
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsTimeValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/White"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <!-- Statistic 3: Most practiced -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="4dp">
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsMost"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/MostPracticed"
+                        android:textColor="@color/White" />
+
+                    <TextView
+                        android:id="@+id/PracticeStatisticsMostValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NULL"
+                        android:textColor="@color/White"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <GridLayout
+                android:id="@+id/Menu"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingVertical="4dp">
+                android:layout_height="match_parent"
+                android:layout_marginTop="12dp"
+                android:columnCount="2"
+                android:rowCount="2">
 
-                <TextView
-                    android:id="@+id/PracticeStatisticsTime"
+                <Button
+                    android:id="@+id/Multiply"
+                    style="@style/MenuButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/AverageTimeOfPractice"
-                    android:textColor="@color/White" />
+                    android:layout_height="0dp"
+                    android:layout_row="0"
+                    android:layout_rowWeight="1"
+                    android:layout_column="0"
+                    android:layout_columnWeight="1"
+                    android:layout_marginEnd="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="@string/Multiply" />
 
-                <TextView
-                    android:id="@+id/PracticeStatisticsTimeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/White"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <!-- Statistic 3: Most practiced -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingVertical="4dp">
-
-                <TextView
-                    android:id="@+id/PracticeStatisticsMost"
+                <Button
+                    android:id="@+id/Divide"
+                    style="@style/MenuButtonStyle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/MostPracticed"
-                    android:textColor="@color/White" />
+                    android:layout_height="0dp"
+                    android:layout_row="0"
+                    android:layout_rowWeight="1"
+                    android:layout_column="1"
+                    android:layout_columnWeight="1"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginBottom="6dp"
+                    android:text="@string/Divide" />
 
-                <TextView
-                    android:id="@+id/PracticeStatisticsMostValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="NULL"
-                    android:textColor="@color/White"
-                    android:textStyle="bold" />
-            </LinearLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <Button
+                    android:id="@+id/AddSubtract"
+                    style="@style/MenuButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_row="1"
+                    android:layout_rowWeight="1"
+                    android:layout_column="0"
+                    android:layout_columnWeight="1"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="6dp"
+                    android:text="@string/AddSubtract" />
 
-    <Button
-        android:id="@+id/Multiply"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/Multiply"
-        app:layout_constraintHeight_percent="0.18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PracticeStatistics"
-        app:layout_constraintWidth_percent="0.4" />
-
-    <Button
-        android:id="@+id/Divide"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/Divide"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.18"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toEndOf="@+id/Multiply"
-        app:layout_constraintTop_toBottomOf="@+id/PracticeStatistics"
-        app:layout_constraintWidth_percent="0.4" />
-
-    <Button
-        android:id="@+id/AddSubtract"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="12dp"
-        android:text="@string/AddSubtract"
-        app:layout_constraintHeight_percent="0.18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Multiply"
-        app:layout_constraintWidth_percent="0.4" />
-
-    <Button
-        android:id="@+id/Mixed"
-        style="@style/MenuButtonStyle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/Mixed"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.18"
-        app:layout_constraintHorizontal_bias="0.777"
-        app:layout_constraintStart_toEndOf="@+id/AddSubtract"
-        app:layout_constraintTop_toBottomOf="@+id/Divide"
-        app:layout_constraintWidth_percent="0.4" />
-
+                <Button
+                    android:id="@+id/Mixed"
+                    style="@style/MenuButtonStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_row="1"
+                    android:layout_rowWeight="1"
+                    android:layout_column="1"
+                    android:layout_columnWeight="1"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="6dp"
+                    android:text="@string/Mixed" />
+            </GridLayout>
+        </RelativeLayout>
+    </LinearLayout>
     <Button
         android:id="@+id/Back"
         style="@style/MenuButtonStyle"
@@ -175,6 +195,5 @@
         app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintWidth_percent="0.4" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
