--- a/app/src/main/res/layout/practice_game_activity.xml
+++ b/app/src/main/res/layout/practice_game_activity.xml
@@ -26,6 +26,9 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textStyle="bold"
+        android:gravity="center"
+        android:lineSpacingExtra="0dp"
+        android:includeFontPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
